<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="profile_image">Profile Image</string>
    <string name="tweet_body">Display tweet here</string>
    <string name="profile_name">profilename</string>
    <string name="screen_name">\@screenname</string>
    <string name="time_ago">hh</string>
    <string name="menu_title">Timeline</string>
    <string name="title_activity_compose_tweet">Compose Tweet</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="title_activity_profile">Profile</string>
    <string name="num_following">following</string>
    <string name="num_followers">followers</string>

</resources>