<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/tvProfleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/profile_name"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvProfleName"
        android:layout_alignBaseline="@+id/tvProfleName"
        android:text="@string/screen_name"
        android:fontFamily="sans-serif-thin"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvProfleName"
        android:layout_below="@+id/tvProfleName"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tweet_body"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="sans-serif-light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTimeAgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvScreenName"
        android:layout_alignBottom="@+id/tvScreenName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/time_ago"
        android:fontFamily="sans-serif-thin"
        android:textSize="12sp" />

</RelativeLayout>
